# rust-auth

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.sqlx/: query-334a5bca8d4b5e2a4fb41fc4caaa89cab777ec6e47a5be026f48b2c08d7f0e59.json  query-4f4e4b5faab8272105426255963a8c9cebd90d5cb2d3e1fb01a9e2245ba377eb.json  query-63308c2be5454cdf97c452038d4a5837cb325194c1c559a22799240a54005430.json  query-72b1401034b2b82504c9e3ea125dbdcb444d30a68bf983b2f82c7af0e546e48f.json  query-95774e8c27f2994ec1cf78699406914a922cec7c6b0a9ef5e87d22d1534b7082.json  query-e5dbd70f31277d41cc3565ac3f0f3fcdf872b545db4f3840b421b1ca0a7d2cd5.json  query-f08a7581ec0ecd855444ebd3ae7711c78f9423426b07f459c7d2c3e7f40c42bf.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: constants.ts  emojis.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.server.js  +page.svelte  Header.svelte  styles.css
migrations/: 20240404101844_users_table.up.sql  20240501104859_is_admin.down.sql  20240501104859_is_admin.up.sql
settings/: base.toml  production.toml
src/: error_handling.rs  main.rs  settings.rs
src/db/: activate_user.rs  change_password.rs  create_user.rs  mod.rs
src/extractors/: auth_bearer.rs  auth_session.rs  mod.rs
src/routes/: login.rs  mod.rs  users.rs
src/routes/login/: local.rs  mod.rs
src/types/: login.rs  mod.rs  tokens.rs  users.rs
src/utils/: api_response.rs  emails.rs  error_handling.rs  mod.rs
templates/: registration_attempt.html  reset_password_email.html  verification_email.html
test/: am_i_logged_in.http  change_password.http  get_user.http  get_users.http  login_local_user.http  login_user.http  regenerate_token.http  register_user.http  reset_password.http
(+46 files in other folders)
