[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"
authors = ["Isak Kyrre Lichtwarck Bjugn <isakbjugn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"]}
chrono = "0.4.37"
config = { version = "0.14.0", features = ["toml"] }
dotenv = "0.15.0"
lettre = { version = "0.11.6", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "1.0.16", features = ["loader"] }
pasetors = "0.6.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls" ,"postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
